customize for my environment

--- a/compose-template.yaml
+++ b/compose-template.yaml
@@ -13,6 +13,7 @@ x-depends-on-configurator: &depends_on_configurator
 
 x-backend-defaults: &backend_defaults
   <<: [*depends_on_configurator, *customizable_image]
+  env_file: "./.secrets.jonjarboe"
   volumes:
     - sites:/home/frappe/frappe-bench/sites
 
@@ -60,6 +61,7 @@ services:
       UPSTREAM_REAL_IP_RECURSIVE: ${UPSTREAM_REAL_IP_RECURSIVE:-off}
       PROXY_READ_TIMEOUT: ${PROXY_READ_TIMEOUT:-120}
       CLIENT_MAX_BODY_SIZE: ${CLIENT_MAX_BODY_SIZE:-50m}
+    env_file: "./.secrets.jonjarboe"
     volumes:
       - sites:/home/frappe/frappe-bench/sites
     depends_on:
@@ -72,6 +74,7 @@ services:
     command:
       - node
       - /home/frappe/frappe-bench/apps/frappe/socketio.js
+    env_file: "./.secrets.jonjarboe"
     volumes:
       - sites:/home/frappe/frappe-bench/sites
 
