--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,21 @@
-version: "3"
-
 services:
+
+  build_erpnext_image:
+    build:
+      context: .
+      dockerfile: ./images/custom/Containerfile
+      args:
+        FRAPPE_PATH: https://github.com/frappe/frappe
+        FRAPPE_BRANCH: version-15
+        APPS_JSON_BASE64: ${APPS_JSON_BASE64}
+      extra_hosts:
+        - "host.docker.internal:host-gateway"
+        - "redis_cache:${ERPNEXT_BUILD_REDIS_CACHE_IP}"
+    image: jrjarboe/erpnext:latest
+    command: ["/bin/true"]
+
   backend:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -18,7 +31,7 @@ services:
       MARIADB_ROOT_PASSWORD: admin
 
   configurator:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -47,7 +60,7 @@ services:
       - logs:/home/frappe/frappe-bench/logs
 
   create-site:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -77,7 +90,7 @@ services:
           fi
         done;
         echo "sites/common_site_config.json found";
-        bench new-site --mariadb-user-host-login-scope='%' --admin-password=admin --db-root-username=root --db-root-password=admin --install-app erpnext --set-default frontend;
+        bench new-site --mariadb-user-host-login-scope='%' --admin-password=admin --db-root-username=root --db-root-password=admin --install-app erpnext --install-app jonjarboe kestra --set-default frontend;
 
   db:
     image: mariadb:10.6
@@ -102,7 +115,7 @@ services:
       - db-data:/var/lib/mysql
 
   frontend:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     depends_on:
@@ -128,7 +141,7 @@ services:
       - "8080:8080"
 
   queue-long:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -144,7 +157,7 @@ services:
       - logs:/home/frappe/frappe-bench/logs
 
   queue-short:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -178,7 +191,7 @@ services:
         condition: on-failure
 
   scheduler:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -192,7 +205,7 @@ services:
       - logs:/home/frappe/frappe-bench/logs
 
   websocket:
-    image: frappe/erpnext:v15.77.0
+    image: jrjarboe/erpnext:latest
     networks:
       - frappe_network
     deploy:
@@ -214,3 +227,4 @@ volumes:
 networks:
   frappe_network:
     driver: bridge
+
