--- a/images/custom/Containerfile
+++ b/images/custom/Containerfile
@@ -17,6 +17,7 @@ RUN useradd -ms /bin/bash frappe \
     curl \
     git \
     vim \
+    ssh \
     nginx \
     gettext-base \
     file \
@@ -115,6 +116,9 @@ USER frappe
 
 ARG FRAPPE_BRANCH=version-15
 ARG FRAPPE_PATH=https://github.com/frappe/frappe
+
+
+
 RUN export APP_INSTALL_ARGS="" && \
   if [ -n "${APPS_JSON_BASE64}" ]; then \
     export APP_INSTALL_ARGS="--apps_path=/opt/frappe/apps.json"; \
@@ -125,7 +129,7 @@ RUN export APP_INSTALL_ARGS="" && \
     --no-procfile \
     --no-backups \
     --skip-redis-config-generation \
-    --verbose \
+    #--verbose \
     /home/frappe/frappe-bench && \
   cd /home/frappe/frappe-bench && \
   echo "{}" > sites/common_site_config.json && \
@@ -139,11 +143,11 @@ COPY --from=builder --chown=frappe:frappe /home/frappe/frappe-bench /home/frappe
 
 WORKDIR /home/frappe/frappe-bench
 
-VOLUME [ \
-  "/home/frappe/frappe-bench/sites", \
-  "/home/frappe/frappe-bench/sites/assets", \
-  "/home/frappe/frappe-bench/logs" \
-]
+RUN bench build
+
+VOLUME [ "/home/frappe/frappe-bench/sites", \
+         "/home/frappe/frappe-bench/sites/assets", \
+         "/home/frappe/frappe-bench/logs" ]
 
 CMD [ \
   "/home/frappe/frappe-bench/env/bin/gunicorn", \
