--- a/images/layered/Containerfile
+++ b/images/layered/Containerfile
@@ -1,9 +1,10 @@
 ARG FRAPPE_BRANCH=version-15
+ARG FRAPPE_PATH=https://github.com/frappe/frappe
 
 FROM frappe/build:${FRAPPE_BRANCH} AS builder
 
-ARG FRAPPE_BRANCH=version-15
-ARG FRAPPE_PATH=https://github.com/frappe/frappe
+ARG FRAPPE_BRANCH
+ARG FRAPPE_PATH
 ARG APPS_JSON_BASE64
 
 USER root
