--- a/compose.yml
+++ b/compose.yml
@@ -90,7 +90,8 @@ services:
           fi
         done;
         echo "sites/common_site_config.json found";
-        bench new-site --mariadb-user-host-login-scope='%' --admin-password=admin --db-root-username=root --db-root-password=admin --install-app erpnext --install-app jonjarboe kestra --set-default frontend;
+        bench new-site --mariadb-user-host-login-scope='%' --admin-password=admin --db-root-username=root --db-root-password=admin --install-app erpnext --install-app jonjarboe --set-default frontend;
+        bench --site frontend set-config host_name "${ERPNEXT_URL}"
 
   db:
     image: mariadb:10.6
@@ -138,7 +139,7 @@ services:
       - sites:/home/frappe/frappe-bench/sites
       - logs:/home/frappe/frappe-bench/logs
     ports:
-      - "8080:8080"
+      - "${ERPNEXT_PORT}:8080"
 
   queue-long:
     image: jrjarboe/erpnext:latest
